--- a/validador.html
+++ b/validador.html
@@ -1,52 +1,48 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
   <title>Validador WIN & Motor</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
+    body { font-family: Arial, sans-serif; padding: 20px; max-width: 100%; box-sizing: border-box; }
     .hidden { display: none; }
     .valido { color: green; font-weight: bold; }
     .invalido { color: red; font-weight: bold; }
-    .secao { border: 1px solid #ccc; padding: 15px; margin-top: 15px; border-radius: 10px; }
-    .feedback-table { border-collapse: collapse; width: 100%; margin-top: 10px; }
-    .feedback-table td, .feedback-table th { border: 1px solid #ccc; padding: 5px 10px; text-align: left; }
+    .secao {
+      max-width: 800px;
+      margin: auto;
+      border: 1px solid #ccc;
+      padding: 15px;
+      margin-top: 15px;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
+    .feedback-table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 10px;
+    }
+    .feedback-table td, .feedback-table th {
+      border: 1px solid #ccc;
+      padding: 5px 10px;
+      text-align: left;
+    }
     button { margin-right: 10px; margin-top: 10px; }
-    input, select { padding: 5px; margin-top: 5px; }
+    input, select {
+      padding: 5px;
+      margin-top: 5px;
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
+    }
+    @media (max-width: 600px) {
+      .feedback-table td, .feedback-table th {
+        font-size: 12px;
+        padding: 5px;
+      }
+    }
   </style>
-
-<style>
-body {
-  font-family: Arial, sans-serif;
-  padding: 20px;
-  max-width: 100%;
-  box-sizing: border-box;
-}
-
-.secao {
-  max-width: 800px;
-  margin: auto;
-  border: 1px solid #ccc;
-  padding: 15px;
-  margin-top: 15px;
-  border-radius: 10px;
-  box-sizing: border-box;
-}
-
-input, select, button {
-  width: 100%;
-  max-width: 100%;
-  box-sizing: border-box;
-}
-
-@media (max-width: 600px) {
-  .feedback-table td, .feedback-table th {
-    font-size: 12px;
-    padding: 5px;
-  }
-}
-</style>
-
 </head>
 <body onload="mostrarSecao('win')">
   <h2>Validador de Identificação de Embarcações</h2>
@@ -57,11 +53,10 @@ input, select, button {
   <!-- Seção WIN -->
   <div id="secaoWin" class="secao">
     <h3>Validador WIN</h3>
-    <input type="text" id="winInput" placeholder="Introduz número WIN (14 ou 16 caracteres)" size="40">
+    <input type="text" id="winInput" placeholder="Introduz número WIN (14 ou 16 caracteres)">
     <button onclick="validarWIN()">Validar</button>
-    <button onclick="mostrarHistoricoWIN()">Ver Histórico WIN</button>
+    <button onclick="window.location.href='historico_win.html'">Ver Histórico WIN</button>
     <div id="resultadoWIN"></div>
-    <div id="historicoWIN" class="hidden"></div>
   </div>
 
   <!-- Seção Motor -->
@@ -78,9 +73,8 @@ input, select, button {
     </select>
     <div id="camposMotor" style="margin-top:10px;"></div>
     <button onclick="validarMotor()">Validar</button>
-    <button onclick="mostrarHistoricoMotor()">Ver Histórico Motores</button>
+    <button onclick="window.location.href='historico_motor.html'">Ver Histórico Motores</button>
     <div id="resultadoMotor"></div>
-    <div id="historicoMotor" class="hidden"></div>
   </div>
 
   <script>
@@ -88,23 +82,15 @@ input, select, button {
       window.location.href = 'login.html';
     }
     function mostrarSecao(sec) {
-      ['secaoWin','secaoMotor','historicoWIN','historicoMotor'].forEach(id => document.getElementById(id).classList.add('hidden'));
+      ['secaoWin','secaoMotor'].forEach(id => document.getElementById(id).classList.add('hidden'));
       if (sec === 'win') document.getElementById('secaoWin').classList.remove('hidden');
       if (sec === 'motor') document.getElementById('secaoMotor').classList.remove('hidden');
     }
 
-    // Histórico WIN
     function salvarHistoricoWIN(win, valido, msg) {
       const h = JSON.parse(localStorage.getItem('hisWIN')||'[]');
       h.unshift({ data: new Date().toLocaleString(), win, valido, msg });
       localStorage.setItem('hisWIN', JSON.stringify(h));
-    }
-    function mostrarHistoricoWIN() {
-      const h = JSON.parse(localStorage.getItem('hisWIN')||'[]');
-      let t = '<table class="feedback-table"><tr><th>Data</th><th>WIN</th><th>Válido</th><th>Mensagem</th></tr>';
-      h.forEach(e => { t += `<tr><td>${e.data}</td><td>${e.win}</td><td>${e.valido}</td><td>${e.msg}</td></tr>`; });
-      t += '</table>';
-      const d = document.getElementById('historicoWIN'); d.innerHTML = t; d.classList.remove('hidden');
     }
 
     function validarNumeroWIN(win) {
@@ -133,6 +119,7 @@ input, select, button {
       ];
       return r;
     }
+
     function validarWIN() {
       const w = document.getElementById('winInput').value;
       const res = validarNumeroWIN(w);
@@ -144,20 +131,12 @@ input, select, button {
       salvarHistoricoWIN(w, res.valido, res.mensagem);
     }
 
-    // Motor
     const regrasMotor = {
       Yamaha: { regex: /^[A-Z0-9]{8,}$/ },
       Honda: { regex: /^[A-Z0-9]+$/ },
       MercuryIn: { regex: /^[0-9A-Z]{7,8}$/ },
       MercuryOut: { regex: /^[0-3][A-Z][0-9]{6}$/ },
       Suzuki: { regex: /^[A-Z]{2}[0-9]{2,3}[A-Z]*[0-9]{7}$/ }
-    };
-    const infoMotor = {
-      Yamaha: { campos:['Etiqueta'], descricao:'Formato: código+serial', notas:'Sem Jet Drive'},
-      Honda: { campos:['FrameSN','EngineSN'], descricao:'2 etiquetas (transom e bloco)', notas:'Devem coincidir'},
-      MercuryIn: { campos:['TransomSN'], descricao:'Inboard Transom SN', notas:'Obrigatório'},
-      MercuryOut: { campos:['OutboardSN'], descricao:'Outboard SN padrão', notas:'Prefixo 0-3'},
-      Suzuki: { campos:['Etiqueta'], descricao:'DF/DT + 7 dígitos', notas:'Verificar prefixo'}
     };
     function mostrarCamposMotor() {
       const m = document.getElementById('marca').value;
@@ -172,17 +151,29 @@ input, select, button {
       }
       document.getElementById('camposMotor').innerHTML = html;
     }
+
     function salvarHistoricoMotor(m, c1, c2, val, msg) {
       const h = JSON.parse(localStorage.getItem('hisMotor')||'[]');
       h.unshift({ data:new Date().toLocaleString(), marca:m, campo1:c1, campo2:c2, valido:val, msg });
       localStorage.setItem('hisMotor', JSON.stringify(h));
     }
-    function mostrarHistoricoMotor() {
-      const h = JSON.parse(localStorage.getItem('hisMotor')||'[]');
-      let t = '<table class="feedback-table"><tr><th>Data</th><th>Marca</th><th>Campo1</th><th>Campo2</th><th>Válido</th><th>Msg</th></tr>';
-      h.forEach(e=>{ t += `<tr><td>${e.data}</td><td>${e.marca}</td><td>${e.campo1}</td><td>${e.campo2||''}</td><td>${e.valido}</td><td>${e.msg}</td></tr>`; });
-      t += '</table>';
-      const d = document.getElementById('historicoMotor'); d.innerHTML = t; d.classList.remove('hidden');
+
+    function validarMotor() {
+      const m = document.getElementById('marca').value;
+      const c1 = document.getElementById('campo1')?.value || '';
+      const c2 = document.getElementById('campo2')?.value || '';
+      const regra = regrasMotor[m];
+      let valido = false, msg = 'Marca não suportada ou número inválido.';
+      if (regra && regra.regex.test(c1)) {
+        valido = true;
+        msg = 'Número de motor válido.';
+        if (m==='Honda' && c1 !== c2) {
+          valido = false;
+          msg = 'SN do Frame e do Bloco não coincidem.';
+        }
+      }
+      salvarHistoricoMotor(m, c1, c2, valido, msg);
+      document.getElementById('resultadoMotor').innerHTML = `<p class="${valido?'valido':'invalido'}">${msg}</p>`;
     }
   </script>
 </body>
