--- a/login.html
+++ b/login.html
@@ -1,69 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-  <meta charset="UTF-8">
-  <title>Login - Validador Marítimo</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif; font-size: 16px;
-      background-color: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .login-container {
-      background-color: white;
-      padding: 30px 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .login-container input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      font-size: 16px;
-    }
-    .login-container button {
-      padding: 10px 20px;
-      font-size: 16px;
-    }
-    img.logo {
-      height: 60px;
-      margin-bottom: 20px;
-    }
-    label {
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <div class="login-container">
-    <img src="logo-pm.png" alt="Logotipo Polícia Marítima" class="logo">
-    <h2>Autenticação</h2>
-    <label for="username">Utilizador:</label><br>
-    <input type="text" id="username" placeholder="Nome de utilizador"><br>
-    <label for="password">Palavra-passe:</label><br>
-    <input type="password" id="password" placeholder="Palavra-passe"><br>
-    <button onclick="login()">Entrar</button>
-    <p id="mensagem" style="color:red; margin-top:10px;"></p>
-  </div>
-
-  <script>
-    function login() {
-      const u = document.getElementById('username').value;
-      const p = document.getElementById('password').value;
-      if (u === 'admin' && p === 'Admin2025') {
-        window.location.href = 'validador.html';
-      } else {
-        document.getElementById('mensagem').textContent = 'Credenciais inválidas';
-      }
-    }
-  </script>
-</body>
-</html>
+<!-- Página de login com cabeçalho e logotipo. -->
