--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=login.html">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Redirecionamento</title>
+  <meta http-equiv="refresh" content="0; URL=login.html" />
 </head>
 <body>
-  <p>Redirecionando para a página de login...</p>
+  <p>Se não for redirecionado automaticamente, <a href="login.html">clique aqui</a>.</p>
 </body>
 </html>
