--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Redirecionamento</title>
-  <meta http-equiv="refresh" content="0; URL=login.html" />
+    <meta charset="UTF-8">
+    <title>WIN Validator - Início</title>
+    <style>
+        body { font-family: Arial, sans-serif; padding: 40px; background-color: #f9f9f9; }
+        h1 { font-size: 26px; margin-bottom: 20px; }
+        ul { list-style: none; padding: 0; }
+        li { margin: 10px 0; }
+        a {
+            text-decoration: none;
+            color: #0366d6;
+            font-size: 18px;
+            padding: 8px 12px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            display: inline-block;
+        }
+        a:hover {
+            background-color: #f0f0f0;
+        }
+    </style>
 </head>
 <body>
-  <p>Se não for redirecionado automaticamente, <a href="login.html">clique aqui</a>.</p>
+    <h1>WIN Validator - Página Principal</h1>
+    <ul>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="validador.html">Validador WIN & Motor</a></li>
+        <li><a href="historico_win.html">Histórico WIN</a></li>
+        <li><a href="historico_motor.html">Histórico Motor</a></li>
+        <li><a href="validador_bilingue_final.html">Validador WIN (Bilingue)</a></li>
+    </ul>
 </body>
 </html>
