--- a/index.html
+++ b/index.html
@@ -3,35 +3,40 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>WIN Validator - Início</title>
+    <title>WIN Validator - Página Principal</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 40px; background-color: #f9f9f9; }
-        h1 { font-size: 26px; margin-bottom: 20px; }
-        ul { list-style: none; padding: 0; }
-        li { margin: 10px 0; }
-        a {
-            text-decoration: none;
-            color: #0366d6;
-            font-size: 18px;
-            padding: 8px 12px;
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            display: inline-block;
+        body {
+            font-family: Arial, sans-serif;
+            background: #f2f2f2;
+            text-align: center;
+            padding-top: 50px;
         }
-        a:hover {
-            background-color: #f0f0f0;
+        h1 {
+            color: #003366;
+        }
+        .button {
+            display: block;
+            margin: 15px auto;
+            padding: 10px 20px;
+            background-color: #004080;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            text-decoration: none;
+            width: 250px;
+        }
+        .button:hover {
+            background-color: #0059b3;
         }
     </style>
 </head>
 <body>
-    <h1>WIN Validator - Página Principal</h1>
-    <ul>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="validador.html">Validador WIN & Motor</a></li>
-        <li><a href="historico_win.html">Histórico WIN</a></li>
-        <li><a href="historico_motor.html">Histórico Motor</a></li>
-        <li><a href="validador_bilingue_final.html">Validador WIN (Bilingue)</a></li>
-    </ul>
+    <h1>🔍 WIN Validator - Página Principal</h1>
+    <a class="button" href="login.html">Login</a>
+    <a class="button" href="validador.html">Validador WIN & Motor</a>
+    <a class="button" href="historico_win.html">Histórico WIN</a>
+    <a class="button" href="historico_motor.html">Histórico Motor</a>
+    <a class="button" href="validador_bilingue.html">Validador WIN (Bilingue)</a>
 </body>
 </html>
