--- a/historico_motor.html
+++ b/historico_motor.html
@@ -2,24 +2,81 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <title>Histórico Motores</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Histórico Motor</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f8f9fa;
+            padding: 20px;
+        }
+        header img {
+            height: 50px;
+            opacity: 0.1;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+        h1 {
+            color: #003366;
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 30px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 8px;
+            text-align: center;
+        }
+        th {
+            background-color: #004080;
+            color: white;
+        }
+        .translation {
+            font-style: italic;
+            font-size: 11px;
+        }
+    </style>
 </head>
 <body>
-  <h2>Histórico de Validações de Motores</h2>
-  <div id="tabelaHistorico"></div>
-  <script>
-    const h = JSON.parse(localStorage.getItem('hisM') || '[]');
-    let t = '<table><tr><th>Data</th><th>Marca</th><th>C1</th><th>C2</th><th>Val</th><th>Msg</th></tr>';
-    h.forEach(e => t += `<tr><td>${e.data}</td><td>${e.m}</td><td>${e.c1}</td><td>${e.c2}</td><td>${e.val}</td><td>${e.msg}</td></tr>`);
-    t += '</table>';
-    document.getElementById('tabelaHistorico').innerHTML = t;
-  </script>
+    <header>
+        <img src="images/logo_pm.png" alt="Logotipo Polícia Marítima">
+    </header>
+    <h1>Histórico de Validações de Motores<br><span class="translation">Engine Validation History</span></h1>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Data<br><span class="translation">Date</span></th>
+                <th>Marca<br><span class="translation">Brand</span></th>
+                <th>Número de Série<br><span class="translation">Serial Number</span></th>
+                <th>Resultado<br><span class="translation">Result</span></th>
+                <th>Justificação<br><span class="translation">Explanation</span></th>
+                <th>Fotografia<br><span class="translation">Photo</span></th>
+            </tr>
+        </thead>
+        <tbody id="tabelaMotor"></tbody>
+    </table>
+
+    <script>
+        const historico = JSON.parse(localStorage.getItem("historico_motor")) || [];
+        const tabela = document.getElementById("tabelaMotor");
+
+        historico.forEach(item => {
+            const linha = document.createElement("tr");
+            linha.innerHTML = `
+                <td>${item.data}</td>
+                <td>${item.marca}</td>
+                <td>${item.numero}</td>
+                <td>${item.resultado}</td>
+                <td>${item.justificacao}</td>
+                <td>${item.foto ? '<img src="' + item.foto + '" width="80">' : 'Sem imagem / No image'}</td>
+            `;
+            tabela.appendChild(linha);
+        });
+    </script>
 </body>
 </html>
