--- a/validador.html
+++ b/validador.html
@@ -1,1 +1,87 @@
-<!-- Ficheiro HTML principal com validação WIN e motores atualizada. -->
+
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <title>Validador de WIN e Motores</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #eef2f3;
+            padding: 20px;
+        }
+        header img {
+            height: 50px;
+            opacity: 0.1;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+        h1 {
+            color: #003366;
+            text-align: center;
+        }
+        .section {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 30px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.05);
+        }
+        label {
+            font-weight: bold;
+        }
+        .translation {
+            font-style: italic;
+            font-size: 11px;
+        }
+        input, select, button {
+            padding: 8px;
+            margin-top: 5px;
+            margin-bottom: 15px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        #resultadoWIN, #resultadoMotor {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #e8f5e9;
+            border-left: 5px solid #388e3c;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="images/logo_pm.png" alt="Logotipo Polícia Marítima">
+    </header>
+    <h1>Validação de Identificação<br><span class="translation">Identification Validation</span></h1>
+
+    <div class="section">
+        <h2>Validador WIN<br><span class="translation">WIN Validator</span></h2>
+        <label for="inputWin">Introduza o número WIN<br><span class="translation">Enter the WIN number</span></label>
+        <input type="text" id="inputWin" placeholder="Ex: FR-CNBZA135A612">
+        <label for="fotoWin">Fotografia<br><span class="translation">Photo</span></label>
+        <input type="file" id="fotoWin">
+        <button onclick="validarWIN()">Validar WIN<br><span class="translation">Validate WIN</span></button>
+        <div id="resultadoWIN"></div>
+    </div>
+
+    <div class="section">
+        <h2>Validador de Motores<br><span class="translation">Engine Validator</span></h2>
+        <label for="marcaMotor">Marca<br><span class="translation">Brand</span></label>
+        <select id="marcaMotor">
+            <option value="">-- Selecione uma marca / Select a brand --</option>
+            <option>Yamaha</option>
+            <option>Honda</option>
+        </select>
+        <label for="numeroMotor">Número de Série<br><span class="translation">Serial Number</span></label>
+        <input type="text" id="numeroMotor" placeholder="Ex: 6ML-1005843">
+        <label for="fotoMotor">Fotografia<br><span class="translation">Photo</span></label>
+        <input type="file" id="fotoMotor">
+        <button onclick="validarMotor()">Validar Motor<br><span class="translation">Validate Engine</span></button>
+        <div id="resultadoMotor"></div>
+    </div>
+
+    <script src="js/validador.js"></script>
+</body>
+</html>
