--- a/historico_win.html
+++ b/historico_win.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+<script src="js/login.js"></script>
+<script>checkLogin();</script>
     <meta charset="UTF-8">
     <title>Histórico WIN</title>
     <style>
