--- a/index.html
+++ b/index.html
@@ -2,41 +2,10 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <title>WIN Validator - Página Principal</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-            text-align: center;
-            padding-top: 50px;
-        }
-        h1 {
-            color: #003366;
-        }
-        .button {
-            display: block;
-            margin: 15px auto;
-            padding: 10px 20px;
-            background-color: #004080;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 16px;
-            text-decoration: none;
-            width: 250px;
-        }
-        .button:hover {
-            background-color: #0059b3;
-        }
-    </style>
+  <meta http-equiv="refresh" content="0; URL='login.html'" />
+  <title>Redirecionar para Login</title>
 </head>
 <body>
-    <h1>🔍 WIN Validator - Página Principal</h1>
-    <a class="button" href="login.html">Login</a>
-    <a class="button" href="validador.html">Validador WIN & Motor</a>
-    <a class="button" href="historico_win.html">Histórico WIN</a>
-    <a class="button" href="historico_motor.html">Histórico Motor</a>
-    <a class="button" href="validador_bilingue.html">Validador WIN (Bilingue)</a>
+  <p>Redirecionando para o login...</p>
 </body>
 </html>
