--- a/login.html
+++ b/login.html
@@ -7,26 +7,18 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #e8f0fe;
+            background: #f2f2f2;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            padding-top: 50px;
-        }
-        header {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-        }
-        header img {
-            height: 60px;
-            opacity: 0.15;
+            height: 100vh;
+            margin: 0;
         }
         .login-container {
             background: white;
-            padding: 30px;
+            padding: 40px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
             width: 300px;
             text-align: center;
         }
@@ -34,54 +26,45 @@
             width: 90%;
             padding: 10px;
             margin: 10px 0;
+            border: 1px solid #ddd;
             border-radius: 5px;
-            border: 1px solid #ccc;
         }
         button {
-            background-color: #004080;
+            width: 100%;
+            padding: 10px;
+            background: #0066cc;
             color: white;
-            padding: 10px 20px;
             border: none;
-            border-radius: 8px;
-            font-size: 16px;
+            border-radius: 5px;
+            font-weight: bold;
+            cursor: pointer;
         }
         button:hover {
-            background-color: #0059b3;
+            background: #004999;
         }
-        .label {
-            font-weight: bold;
-        }
-        .translation {
-            font-style: italic;
-            font-size: 12px;
+        h2 {
+            margin-bottom: 20px;
         }
     </style>
-</head>
-<body>
-    <header>
-        <img src="images/logo_pm.png" alt="Logotipo Polícia Marítima">
-    </header>
-
-    <div class="login-container">
-        <h2>Login</h2>
-        <label class="label">Utilizador<br><span class="translation">Username</span></label><br>
-        <input type="text" id="username" placeholder="Introduza o utilizador">
-        <label class="label">Palavra-passe<br><span class="translation">Password</span></label><br>
-        <input type="password" id="password" placeholder="Introduza a palavra-passe"><br>
-        <button onclick="login()">Entrar / Login</button>
-        <p id="mensagem" style="color:red;"></p>
-    </div>
-
     <script>
         function login() {
-            var u = document.getElementById("username").value;
-            var p = document.getElementById("password").value;
-            if (u === "admin" && p === "Admin2025") {
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            if (username === "admin" && password === "Admin2025") {
                 window.location.href = "validador.html";
             } else {
-                document.getElementById("mensagem").innerText = "Credenciais inválidas / Invalid credentials";
+                alert("Credenciais inválidas!");
             }
         }
     </script>
+</head>
+<body>
+    <div class="login-container">
+        <h2>Login</h2>
+        <input type="text" id="username" placeholder="Utilizador" required><br>
+        <input type="password" id="password" placeholder="Palavra-passe" required><br>
+        <button onclick="login()">Entrar</button>
+    </div>
 </body>
 </html>
