--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-  <meta http-equiv="refresh" content="0; URL='login.html'" />
-  <title>Redirecionar para Login</title>
-</head>
-<body>
-  <p>Redirecionando para o login...</p>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta http-equiv='refresh' content='0; URL=login.html'></head><body></body></html>
