--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><meta http-equiv='refresh' content='0; URL=login.html'></head><body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="refresh" content="0; URL='login.html'" />
+    <title>Redirecionamento</title>
+</head>
+<body>
+    <p>Redirecionando para a página de login...</p>
+</body>
+</html>
